# pluckertree

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: MathUtil.h  Pluckertree.h  PluckertreeSegments.h
src/: CMakeLists.txt
src/pluckertree/: RegionDistanceMinimizer.cpp
tests/: Benchmarks.cpp  CMakeLists.txt  DataSetGenerator.cpp  DataSetGenerator.h  FixedMomentRegionDistanceMinimizer.cpp  Line.cpp  LineSegments.cpp  RegionDistanceMinimizer.cpp  TestUtilities.h  Tree.cpp
